tests/invalid/visibility_internal/internal_access_from_global_same_file.pts
prototype Core {
    internal int state = 0;
}

function main() : void {
    Core c = Core.clone();
    c.state = 1;
}
